...
import com.example.tradeflow.ui.theme.Blue
import com.example.tradeflow.ui.theme.Greenish
import com.example.tradeflow.ui.theme.PurpleGrey80
import kotlinx.coroutines.launch

data class Country(
    val name: String,
    val code: String,
    val flag: String
)
val countries = listOf(
    Country("United States", "+1", "🇺🇸"),
    Country("Nigeria", "+234", "🇳🇬"),
...
                // Phone Number Input
                OutlinedTextField(
                    value = phone,
                    onValueChange = {phone = it },
                    modifier = Modifier
                        .weight(1f)
                        .testTag("phone"),
                    shape = RoundedCornerShape(10.dp),
                    placeholder = { Text(text = "Enter phone number") },
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Phone)
                )
            }

...
            Spacer(modifier = Modifier.height(4.dp))
            OutlinedTextField(
                value = email,
                onValueChange = { email = it },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("email"),
                shape = RoundedCornerShape(10.dp),
                placeholder = { Text("name@email.com") }
            )

            Spacer(modifier = Modifier.height(10.dp))

...
            Spacer(modifier = Modifier.height(4.dp))
            OutlinedTextField(
                value = password,
                onValueChange = { password = it },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("password"),
                shape = RoundedCornerShape(10.dp),
                placeholder = { Text("Create a password") },
                visualTransformation =
                    if (showPassword) VisualTransformation.None else PasswordVisualTransformation(),
                trailingIcon = {
                    IconButton(onClick = { showPassword = !showPassword }) {
...

            OutlinedTextField(
                value = confirmPassword,
                onValueChange = { confirmPassword = it },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("confirmPassword"),
                shape = RoundedCornerShape(10.dp),
                placeholder = { Text("Confirm password") },
                visualTransformation =
                    if (showConfirmPassword) VisualTransformation.None else PasswordVisualTransformation(),
                trailingIcon = {
                    IconButton(onClick = { showConfirmPassword = !showConfirmPassword }) {
...
                verticalAlignment = Alignment.CenterVertically,
                modifier = Modifier.offset(x = (-12).dp)
            ){
                Checkbox(
                    checked = terms,
                    onCheckedChange = { terms = it },
                    modifier = Modifier.testTag("terms")
                )
                Text(
                    buildAnnotatedString {
                        append("I've read and agree with the ")
                        withStyle(SpanStyle(color = BlueButton)) {
                            append("Terms and Conditions")
...
                        }
                    }
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .height(55.dp)
                    .testTag("registerButton"),
                shape = RoundedCornerShape(12.dp),
                colors = ButtonDefaults.buttonColors(containerColor = BlueButton)
            ) {
                Text("Register", fontSize = 17.sp, color = Color.White)
            }
        }
...
